# Ej-Nociones-programacion-Alejandro-Abanades

./: CMakeLists.txt  README.md  main.cpp  main.h
project1/: Estudiante.cpp  Estudiante.h  Persona.cpp  Persona.h  main.cpp
project2/: funciones.cpp  funciones.h  main2.cpp  main2.h  matematicas.cpp
